# randfan

./: .gitignore  README.md  demo.c  randfan.h  rfp.h
pushing/: README.md  compare_to_cytools_triang_fast.py  live_triplot.py  pyproject.toml
pushing/pushing/: pushing.pyx
pushing/src/: README.md  demo.c  pushing.h
rfp/src/: demo.c  hardcode_leibniz.py  pushing.h
vcgame/: .gitignore  README.md  main.py  pyproject.toml
vcgame/agents/: random_agent.py
vcgame/game/: __init__.py  loop.py
vcgame/game/agents/: random_agent.py
vcgame/renderer/: __init__.py  colors.py  renderer.py
vcgame/shapes/: __init__.py  __main__.py  cube.py  random.py  reflexive.py  trunc_oct.py
vcgame/src/: display.py  generate_cube.py  generate_random.py  generate_reflexive.py  generate_trunc_oct.py  player.py
vcgame/tests/: conftest.py  test_cube.py  test_display.py  test_player.py  test_shapes.py
