[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pushing"
version = "0.1.0"
description = "Random fine pushing triangulations of lattice vector/point configurations"
authors = [{ name = "Nate MacFadden" }]
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.9"

[project.optional-dependencies]
test = [
    "pytest",
    "regfans",
    "numpy",
]
